Fix contrast issue in footer

--- a/_patterns/footer/footer.css
+++ b/_patterns/footer/footer.css
@@ -7,6 +7,10 @@ a {
   font-weight: normal;
 }
 
+a:hover {
+
+}
+
 span {
   color: var(--color-primary);
 }
